third_party/move/move-compiler-v2/tests/more-v1/expansion/duplicate_alias.exp

Diagnostics:
warning: unused alias
  ┌─ tests/more-v1/expansion/duplicate_alias.move:8:19
  │
8 │     use 0x2::Y as Z;
  │                   ^ Unused 'use' of alias 'Z'. Consider removing it

error: duplicate declaration, item, or annotation
  ┌─ tests/more-v1/expansion/duplicate_alias.move:8:19
  │
7 │     use 0x2::X as Z;
  │                   - Alias previously defined here
8 │     use 0x2::Y as Z;
  │                   ^ Duplicate module alias 'Z'. Module aliases must be unique within a given namespace
